Closed Bug 1822315 Opened 1 year ago Closed 1 year ago

Minor tweaks to desktop environment detection.

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

VERIFIED FIXED
113 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox111 --- unaffected
firefox112 --- verified
firefox113 --- verified

People

(Reporter: emilio, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

No description provided.

At least on my system you can get on an state where XDG_CURRENT_DESKTOP is set
to the empty string (I think this comes from sddm when launching a legacy
WM).

Found this while trying to repro bug 1820542. Unclear if this is enough to fix
the issues in comment 0 but locally it's enough to fix fvwm detection here.

Assignee: nobody → emilio
Status: NEW → ASSIGNED

It seems I broke this in bug 1812698, because the desktopEnvironment
iteration here on gfxinfo overrides this:

https://searchfox.org/mozilla-central/rev/dbec4165e4c26a0ff970b614842b689e8357593c/toolkit/modules/Troubleshoot.sys.mjs#560

Depends on D172568

Comment on attachment 9322988 [details]
Bug 1822315 - Fix display of DE in about:support. r=stransky

Beta/Release Uplift Approval Request

  • User impact if declined: Desktop Environment doesn't show up in about:support, which can be useful to diagnose issues.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Open about:support on Linux, search for "Desktop Environment"
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): One line removal.
  • String changes made/needed: none
  • Is Android affected?: No
Attachment #9322988 - Flags: approval-mozilla-release?
Attachment #9322988 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/68e1460c9bfd
Ignore empty env vars in desktop environment detection. r=stransky
https://hg.mozilla.org/integration/autoland/rev/3eafc14a2578
Fix display of DE in about:support. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
QA Whiteboard: [qa-triaged]

Comment on attachment 9322988 [details]
Bug 1822315 - Fix display of DE in about:support. r=stransky

Approved for 112.0b4

Attachment #9322988 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9322988 [details]
Bug 1822315 - Fix display of DE in about:support. r=stransky

Rejecting as the line removed in the patch is not in Release
:emilio if this there's is something else needed, please let me know otherwise feel free to clear the needinfo

Flags: needinfo?(emilio)
Attachment #9322988 - Flags: approval-mozilla-release? → approval-mozilla-release-

Reproduced the issue on Ubuntu 20.04 using FF build 112.0a1(20230312211644).
Verified as fixed on Ubuntu 20.04 using FF builds 113.0a1(20230319214532) and 112.0b4(20230319180129).

Emilio, this line does not seem to appear on neither Win10 or Mac 10.13 is this expected? Thank you.

Ah, indeed. It seems this issue was introduced in bug 1808571 due to a rebase mistake most likely.

Flags: needinfo?(emilio)
Keywords: regression
Regressed by: 1808571

(In reply to Monica Chiorean from comment #9)

Reproduced the issue on Ubuntu 20.04 using FF build 112.0a1(20230312211644).
Verified as fixed on Ubuntu 20.04 using FF builds 113.0a1(20230319214532) and 112.0b4(20230319180129).

Emilio, this line does not seem to appear on neither Win10 or Mac 10.13 is this expected? Thank you.

Yeah, this is expected.

Set release status flags based on info from the regressing bug 1808571

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: