Bug 1822315 - Ignore empty env vars in desktop environment detection. r=stransky

At least on my system you can get on an state where XDG_CURRENT_DESKTOP is set
to the empty string (I think this comes from sddm when launching a legacy
WM).

Found this while trying to repro bug 1820542. Unclear if this is enough to fix
the issues in comment 0 but locally it's enough to fix fvwm detection here.

Differential Revision: https://phabricator.services.mozilla.com/D172568